--- a/VueMeal-Project/package.json
+++ b/VueMeal-Project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.8",
     "@heroicons/vue": "^2.0.14",
+    "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.6",
     "vue": "^3.2.45",
     "vue-router": "^4.0.13",
